<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp">

        <EditText
            android:id="@+id/input_instrument_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_instrument_code"
            android:inputType="textNoSuggestions"
            android:maxLines="1" />

        <EditText
            android:id="@+id/input_instrument_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_instrument_code"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_note"
            android:inputType="text"
            android:maxLines="1" />

        <TextView
            android:id="@+id/label_instrument_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_instrument_note"
            android:layout_marginTop="16dp"
            android:text="@string/label_instrument_type"
            android:textSize="14sp"
            android:textColor="?android:attr/textColorSecondary" />

        <Spinner
            android:id="@+id/spinner_instrument_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_instrument_type"
            android:layout_marginTop="4dp" />

        <EditText
            android:id="@+id/input_decimal_places"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner_instrument_type"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_decimal_places"
            android:inputType="number"
            android:maxLines="1" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/action_save" />

    </RelativeLayout>

</LinearLayout>
